--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ Bar
 
 Sub Bar
 </script></section></section><section  data-markdown><script type="text/template">
+## slide 4
+</script></section><section  data-markdown><script type="text/template">
 The End.
 
 </script></section></div>
